# TSC

./: .gitignore  LICENSE  TSC_server.py  __init__.py  client.py  client_function.py  client_testing.py  pyproject.toml  readme.MD  server.py  setup.cfg
.github/workflows/: build.yml
TSC.egg-info/: PKG-INFO  SOURCES.txt
TSC/documentation/: developing_plugins.md  importing_plugins.md
TSC/testing/: server.py
documentation/: README.md  client.md  documentation.md  server.md  version_information.txt
