[metadata]
name = tortoise server client
version = 0.1.0
author = Darion_Kighton-Fitt
author_email = darkfitt@gmail.com
description = this is a package that is used for making networking programs that can talk to each other
long_description = file: readme.MD
long_description_content_type = text/markdown
url = https://github.com/freeboardtortoise/TSC.git
    Bug Tracker = https://github.com/Freeboardtortoise/TSC.git/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Coppywrite
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.9
include_package_data = True